fix(toolbar)
summary:
- ensure the toolbar is not overlapped on the data table
- use specific directives instead of common module

--- a/src/assets/scss/layout/_position.scss
+++ b/src/assets/scss/layout/_position.scss
@@ -2,7 +2,7 @@
   top: $n * 1rem;
 }
 
-$-indexes: 1;
+$-indexes: 1, 1000;
 $-positions: relative, absolute, sticky, fixed;
 
 .position {
